fixed dropdownmenu hide scrollbar on category

--- a/style/components/floating_addTask.css
+++ b/style/components/floating_addTask.css
@@ -36,8 +36,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-left: 74px;
-  padding-right: 74px;
+  padding: 0 74px;
   width: 1116px;
   height: 870px;
   background-color: rgba(255, 255, 255, 1);
